k8s_server/api_microservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-microservice
  labels:
    app: api-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-microservice
  template:
    metadata:
      labels:
        app: api-microservice
    spec:
      containers:
        - name: api-microservice
          image: nestorx211/k8s-microservice-python:1.0.1
          ports:
            - containerPort: 8000
          startupProbe:
            initialDelaySeconds: 15
            failureThreshold: 3
            periodSeconds: 15
            httpGet:
              path: /live
              port: 8000
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 600m
              memory: 1Gi
