k8s_server/api_microservice_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-microservice
  namespace: api
spec:
  selector:
    app: api-microservice
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
