k8s_server/api_microservice_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-microservice
                port:
                  number: 3000
